dfir_rs/tests/compile-fail-stable/surface_loop_badlifetime_loop_outside_loop.stderr
error: Operator uses `'loop` persistence, but is not within a `loop { ... }` context.
 --> tests/compile-fail-stable/surface_loop_badlifetime_loop_outside_loop.rs:4:23
  |
4 |             -> fold::<'loop>(|| 0, |old: &mut _, val| {
  |                       ^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_loop_badlifetime_loop_outside_loop.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
